<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vaultix_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/master_title"
        android:textColor="@color/vaultix_text_light"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/vaultix_primary"
        app:boxBackgroundMode="filled"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/vaultix_text_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMasterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/master_password"
            android:inputType="textPassword"
            android:textColor="@color/vaultix_text_light"
            android:textColorHint="@color/vaultix_text_light" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUnlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/unlock"
        android:textColor="@color/vaultix_shadow"
        app:backgroundTint="@color/vaultix_accent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone" />

</LinearLayout>
